# widgetdc-contracts

./: .cursorrules  .dependency-cruiser.cjs  .gitignore  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  GEMINI.md  GLOBAL_AGENT_EXECUTION_POLICY.md  GLOBAL_AGENT_GOVERNANCE.md  QWEN.md  README.md  WIRE_FORMAT.md  deploy-datapulse.bat  package-lock.json  package.json  railway.toml  run-pr-contracts-1.ps1  tsconfig.build.json  tsconfig.json
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
arch/: ARCHITECTURE_REPO_MAP_2026-02.md  data-sources.json  dominance_dashboard.html  platform-graph.json
claudedocs/: 2026-02-23-platform-analysis-mcp-api-memory.md  2026-02-25-updated-architecture-repo-map.md
config/: agent_autoflow_policy.json
docs/: ADV_GRAPH_INTEGRATION_GUARDRAILS_2026-03-18.md  DECISION_QUALITY_SCORECARD_2026-03-17.md  (+9 more)
python/: pyproject.toml
python/tests/: conftest.py  test_dominance.py  test_schemas_parity.py
python/widgetdc_contracts/: __init__.py  _base.py  adoption.py  agent.py  cognitive.py  consulting.py  graph.py  health.py  http_.py  mcp.py  metrics.py  mrp.py  observation.py  opportunities.py  orchestrator.py  profile.py  salience.py  security.py  tender.py  viking.py  win_probability.py
python/widgetdc_contracts/ast_graph/: parser.py
python/widgetdc_contracts/snout_engine/: build_graph.py  fetch_papers.py  inference.py  process_papers.py  query_agent.py  visualize_graph.py
python/widgetdc_contracts/snout_engine/models/: schemas.py
python/widgetdc_contracts/snout_engine/utils/: nlp_utils.py
(+342 files in other folders)
