[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "widgetdc-contracts"
version = "0.2.0"
description = "WidgeTDC platform shared type contracts (Python/Pydantic v2)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["widgetdc_contracts"]
