[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "widgetdc-contracts"
version = "0.2.0"
description = "WidgeTDC platform shared type contracts (Python/Pydantic v2)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
adv-graph = [
    "tree-sitter>=0.23.0,<1",
    "tree-sitter-language-pack>=0.3.0,<1",
    "networkx>=3.2,<4",
    "watchdog>=4.0.0,<6",
]
snout = [
    "networkx>=3.2,<4",
    "pandas>=2.0,<3.0",
    "numpy>=1.26,<3",
    "nltk>=3.8,<4",
    "python-dotenv>=1.0,<2",
    "qdrant-client>=1.9,<2",
    "spacy>=3.7,<4",
    "sentence-transformers>=3.0.0,<4",
    "langchain>=0.3,<1",
    "langchain-core>=0.3,<1",
    "langchain-huggingface>=0.1,<1",
    "pyvis>=0.3,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["widgetdc_contracts"]
